--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\jenso\\AppData\\Local\\Programs\\Python\\Python38\\python.exe"
+    "python.pythonPath": "/home/learning/anaconda3/envs/cs7643/bin/python"
 }
